feat: CRUD clientes
